# joblens

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: scaper.ipynb
src/joblens/pipeline/: inspect_db.py  storage.py
src/joblens/scraper/: base.py  hcker_news.py  main.py  muse.py  remoteok.py  runner.py  weworkremotely.py
