[project]
name = "joblens"
version = "0.1.0"
description = ""
authors = [
    {name = "bhaveshUp2010",email = "bhaav.minor@gmail.com"}
]
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]

[tool.poetry]
packages = [{include = "joblens", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
